parser.output
   0  $accept : %entry% $end

   1  program : INT DIMENSIONS OF config END opt_statements EOF

   2  config : INT DOT_DOT INT
   3         | fields

   4  fields : field
   5         | fields COMMA field

   6  field : ID OF INT DOT_DOT INT

   7  opt_statements :
   8                 | opt_statements statement

   9  elseif_branches :
  10                  | elseif_branches ELSEIF condition THEN opt_statements

  11  statement : IF condition THEN opt_statements elseif_branches ELSE opt_statements END
  12            | IF condition THEN opt_statements elseif_branches END
  13            | cell ASSIGN expression
  14            | ID ASSIGN expression

  15  condition : expression LT expression
  16            | expression GT expression
  17            | expression LE expression
  18            | expression GE expression
  19            | expression EQ expression
  20            | expression NE expression

  21  cell : LBRACKET INT COMMA INT RBRACKET

  22  expression : INT
  23             | ID
  24             | cell
  25             | ADD expression
  26             | SUB expression
  27             | expression ADD expression
  28             | expression SUB expression
  29             | expression MUL expression
  30             | expression DIV expression
  31             | expression MOD expression
  32             | LPAREN expression RPAREN

  33  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (33)

	INT  shift 3
	.  error

	program  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : INT . DIMENSIONS OF config END opt_statements EOF  (1)

	DIMENSIONS  shift 5
	.  error


state 4
	%entry% : '\001' program .  (33)

	.  reduce 33


state 5
	program : INT DIMENSIONS . OF config END opt_statements EOF  (1)

	OF  shift 6
	.  error


state 6
	program : INT DIMENSIONS OF . config END opt_statements EOF  (1)

	ID  shift 7
	INT  shift 8
	.  error

	config  goto 9
	fields  goto 10
	field  goto 11


state 7
	field : ID . OF INT DOT_DOT INT  (6)

	OF  shift 12
	.  error


state 8
	config : INT . DOT_DOT INT  (2)

	DOT_DOT  shift 13
	.  error


state 9
	program : INT DIMENSIONS OF config . END opt_statements EOF  (1)

	END  shift 14
	.  error


state 10
	config : fields .  (3)
	fields : fields . COMMA field  (5)

	COMMA  shift 15
	END  reduce 3


state 11
	fields : field .  (4)

	.  reduce 4


state 12
	field : ID OF . INT DOT_DOT INT  (6)

	INT  shift 16
	.  error


state 13
	config : INT DOT_DOT . INT  (2)

	INT  shift 17
	.  error


state 14
	program : INT DIMENSIONS OF config END . opt_statements EOF  (1)
	opt_statements : .  (7)

	.  reduce 7

	opt_statements  goto 18


state 15
	fields : fields COMMA . field  (5)

	ID  shift 7
	.  error

	field  goto 19


state 16
	field : ID OF INT . DOT_DOT INT  (6)

	DOT_DOT  shift 20
	.  error


state 17
	config : INT DOT_DOT INT .  (2)

	.  reduce 2


state 18
	program : INT DIMENSIONS OF config END opt_statements . EOF  (1)
	opt_statements : opt_statements . statement  (8)

	EOF  shift 21
	LBRACKET  shift 22
	IF  shift 23
	ID  shift 24
	.  error

	statement  goto 25
	cell  goto 26


state 19
	fields : fields COMMA field .  (5)

	.  reduce 5


state 20
	field : ID OF INT DOT_DOT . INT  (6)

	INT  shift 27
	.  error


state 21
	program : INT DIMENSIONS OF config END opt_statements EOF .  (1)

	.  reduce 1


state 22
	cell : LBRACKET . INT COMMA INT RBRACKET  (21)

	INT  shift 28
	.  error


state 23
	statement : IF . condition THEN opt_statements elseif_branches ELSE opt_statements END  (11)
	statement : IF . condition THEN opt_statements elseif_branches END  (12)

	LBRACKET  shift 22
	ADD  shift 29
	SUB  shift 30
	LPAREN  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	condition  goto 34
	cell  goto 35
	expression  goto 36


state 24
	statement : ID . ASSIGN expression  (14)

	ASSIGN  shift 37
	.  error


state 25
	opt_statements : opt_statements statement .  (8)

	.  reduce 8


state 26
	statement : cell . ASSIGN expression  (13)

	ASSIGN  shift 38
	.  error


state 27
	field : ID OF INT DOT_DOT INT .  (6)

	.  reduce 6


state 28
	cell : LBRACKET INT . COMMA INT RBRACKET  (21)

	COMMA  shift 39
	.  error


state 29
	expression : ADD . expression  (25)

	LBRACKET  shift 22
	ADD  shift 29
	SUB  shift 30
	LPAREN  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 35
	expression  goto 40


state 30
	expression : SUB . expression  (26)

	LBRACKET  shift 22
	ADD  shift 29
	SUB  shift 30
	LPAREN  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 35
	expression  goto 41


state 31
	expression : LPAREN . expression RPAREN  (32)

	LBRACKET  shift 22
	ADD  shift 29
	SUB  shift 30
	LPAREN  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 35
	expression  goto 42


state 32
	expression : ID .  (23)

	.  reduce 23


state 33
	expression : INT .  (22)

	.  reduce 22


state 34
	statement : IF condition . THEN opt_statements elseif_branches ELSE opt_statements END  (11)
	statement : IF condition . THEN opt_statements elseif_branches END  (12)

	THEN  shift 43
	.  error


state 35
	expression : cell .  (24)

	.  reduce 24


state 36
	condition : expression . LT expression  (15)
	condition : expression . GT expression  (16)
	condition : expression . LE expression  (17)
	condition : expression . GE expression  (18)
	condition : expression . EQ expression  (19)
	condition : expression . NE expression  (20)
	expression : expression . ADD expression  (27)
	expression : expression . SUB expression  (28)
	expression : expression . MUL expression  (29)
	expression : expression . DIV expression  (30)
	expression : expression . MOD expression  (31)

	ADD  shift 44
	SUB  shift 45
	MUL  shift 46
	DIV  shift 47
	MOD  shift 48
	LT  shift 49
	GT  shift 50
	LE  shift 51
	GE  shift 52
	EQ  shift 53
	NE  shift 54
	.  error


state 37
	statement : ID ASSIGN . expression  (14)

	LBRACKET  shift 22
	ADD  shift 29
	SUB  shift 30
	LPAREN  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 35
	expression  goto 55


state 38
	statement : cell ASSIGN . expression  (13)

	LBRACKET  shift 22
	ADD  shift 29
	SUB  shift 30
	LPAREN  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 35
	expression  goto 56


state 39
	cell : LBRACKET INT COMMA . INT RBRACKET  (21)

	INT  shift 57
	.  error


state 40
	expression : ADD expression .  (25)
	expression : expression . ADD expression  (27)
	expression : expression . SUB expression  (28)
	expression : expression . MUL expression  (29)
	expression : expression . DIV expression  (30)
	expression : expression . MOD expression  (31)

	MUL  shift 46
	DIV  shift 47
	MOD  shift 48
	EOF  reduce 25
	END  reduce 25
	LBRACKET  reduce 25
	ADD  reduce 25
	SUB  reduce 25
	IF  reduce 25
	THEN  reduce 25
	ELSE  reduce 25
	ELSEIF  reduce 25
	LT  reduce 25
	GT  reduce 25
	LE  reduce 25
	GE  reduce 25
	EQ  reduce 25
	NE  reduce 25
	RPAREN  reduce 25
	ID  reduce 25


state 41
	expression : SUB expression .  (26)
	expression : expression . ADD expression  (27)
	expression : expression . SUB expression  (28)
	expression : expression . MUL expression  (29)
	expression : expression . DIV expression  (30)
	expression : expression . MOD expression  (31)

	MUL  shift 46
	DIV  shift 47
	MOD  shift 48
	EOF  reduce 26
	END  reduce 26
	LBRACKET  reduce 26
	ADD  reduce 26
	SUB  reduce 26
	IF  reduce 26
	THEN  reduce 26
	ELSE  reduce 26
	ELSEIF  reduce 26
	LT  reduce 26
	GT  reduce 26
	LE  reduce 26
	GE  reduce 26
	EQ  reduce 26
	NE  reduce 26
	RPAREN  reduce 26
	ID  reduce 26


state 42
	expression : expression . ADD expression  (27)
	expression : expression . SUB expression  (28)
	expression : expression . MUL expression  (29)
	expression : expression . DIV expression  (30)
	expression : expression . MOD expression  (31)
	expression : LPAREN expression . RPAREN  (32)

	ADD  shift 44
	SUB  shift 45
	MUL  shift 46
	DIV  shift 47
	MOD  shift 48
	RPAREN  shift 58
	.  error


state 43
	statement : IF condition THEN . opt_statements elseif_branches ELSE opt_statements END  (11)
	statement : IF condition THEN . opt_statements elseif_branches END  (12)
	opt_statements : .  (7)

	.  reduce 7

	opt_statements  goto 59


state 44
	expression : expression ADD . expression  (27)

	LBRACKET  shift 22
	ADD  shift 29
	SUB  shift 30
	LPAREN  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 35
	expression  goto 60


state 45
	expression : expression SUB . expression  (28)

	LBRACKET  shift 22
	ADD  shift 29
	SUB  shift 30
	LPAREN  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 35
	expression  goto 61


state 46
	expression : expression MUL . expression  (29)

	LBRACKET  shift 22
	ADD  shift 29
	SUB  shift 30
	LPAREN  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 35
	expression  goto 62


state 47
	expression : expression DIV . expression  (30)

	LBRACKET  shift 22
	ADD  shift 29
	SUB  shift 30
	LPAREN  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 35
	expression  goto 63


state 48
	expression : expression MOD . expression  (31)

	LBRACKET  shift 22
	ADD  shift 29
	SUB  shift 30
	LPAREN  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 35
	expression  goto 64


state 49
	condition : expression LT . expression  (15)

	LBRACKET  shift 22
	ADD  shift 29
	SUB  shift 30
	LPAREN  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 35
	expression  goto 65


state 50
	condition : expression GT . expression  (16)

	LBRACKET  shift 22
	ADD  shift 29
	SUB  shift 30
	LPAREN  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 35
	expression  goto 66


state 51
	condition : expression LE . expression  (17)

	LBRACKET  shift 22
	ADD  shift 29
	SUB  shift 30
	LPAREN  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 35
	expression  goto 67


state 52
	condition : expression GE . expression  (18)

	LBRACKET  shift 22
	ADD  shift 29
	SUB  shift 30
	LPAREN  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 35
	expression  goto 68


state 53
	condition : expression EQ . expression  (19)

	LBRACKET  shift 22
	ADD  shift 29
	SUB  shift 30
	LPAREN  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 35
	expression  goto 69


state 54
	condition : expression NE . expression  (20)

	LBRACKET  shift 22
	ADD  shift 29
	SUB  shift 30
	LPAREN  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 35
	expression  goto 70


state 55
	statement : ID ASSIGN expression .  (14)
	expression : expression . ADD expression  (27)
	expression : expression . SUB expression  (28)
	expression : expression . MUL expression  (29)
	expression : expression . DIV expression  (30)
	expression : expression . MOD expression  (31)

	ADD  shift 44
	SUB  shift 45
	MUL  shift 46
	DIV  shift 47
	MOD  shift 48
	EOF  reduce 14
	END  reduce 14
	LBRACKET  reduce 14
	IF  reduce 14
	ELSE  reduce 14
	ELSEIF  reduce 14
	ID  reduce 14


state 56
	statement : cell ASSIGN expression .  (13)
	expression : expression . ADD expression  (27)
	expression : expression . SUB expression  (28)
	expression : expression . MUL expression  (29)
	expression : expression . DIV expression  (30)
	expression : expression . MOD expression  (31)

	ADD  shift 44
	SUB  shift 45
	MUL  shift 46
	DIV  shift 47
	MOD  shift 48
	EOF  reduce 13
	END  reduce 13
	LBRACKET  reduce 13
	IF  reduce 13
	ELSE  reduce 13
	ELSEIF  reduce 13
	ID  reduce 13


state 57
	cell : LBRACKET INT COMMA INT . RBRACKET  (21)

	RBRACKET  shift 71
	.  error


state 58
	expression : LPAREN expression RPAREN .  (32)

	.  reduce 32


state 59
	opt_statements : opt_statements . statement  (8)
	statement : IF condition THEN opt_statements . elseif_branches ELSE opt_statements END  (11)
	statement : IF condition THEN opt_statements . elseif_branches END  (12)
	elseif_branches : .  (9)

	LBRACKET  shift 22
	IF  shift 23
	ID  shift 24
	END  reduce 9
	ELSE  reduce 9
	ELSEIF  reduce 9

	statement  goto 25
	elseif_branches  goto 72
	cell  goto 26


state 60
	expression : expression . ADD expression  (27)
	expression : expression ADD expression .  (27)
	expression : expression . SUB expression  (28)
	expression : expression . MUL expression  (29)
	expression : expression . DIV expression  (30)
	expression : expression . MOD expression  (31)

	MUL  shift 46
	DIV  shift 47
	MOD  shift 48
	EOF  reduce 27
	END  reduce 27
	LBRACKET  reduce 27
	ADD  reduce 27
	SUB  reduce 27
	IF  reduce 27
	THEN  reduce 27
	ELSE  reduce 27
	ELSEIF  reduce 27
	LT  reduce 27
	GT  reduce 27
	LE  reduce 27
	GE  reduce 27
	EQ  reduce 27
	NE  reduce 27
	RPAREN  reduce 27
	ID  reduce 27


state 61
	expression : expression . ADD expression  (27)
	expression : expression . SUB expression  (28)
	expression : expression SUB expression .  (28)
	expression : expression . MUL expression  (29)
	expression : expression . DIV expression  (30)
	expression : expression . MOD expression  (31)

	MUL  shift 46
	DIV  shift 47
	MOD  shift 48
	EOF  reduce 28
	END  reduce 28
	LBRACKET  reduce 28
	ADD  reduce 28
	SUB  reduce 28
	IF  reduce 28
	THEN  reduce 28
	ELSE  reduce 28
	ELSEIF  reduce 28
	LT  reduce 28
	GT  reduce 28
	LE  reduce 28
	GE  reduce 28
	EQ  reduce 28
	NE  reduce 28
	RPAREN  reduce 28
	ID  reduce 28


state 62
	expression : expression . ADD expression  (27)
	expression : expression . SUB expression  (28)
	expression : expression . MUL expression  (29)
	expression : expression MUL expression .  (29)
	expression : expression . DIV expression  (30)
	expression : expression . MOD expression  (31)

	.  reduce 29


state 63
	expression : expression . ADD expression  (27)
	expression : expression . SUB expression  (28)
	expression : expression . MUL expression  (29)
	expression : expression . DIV expression  (30)
	expression : expression DIV expression .  (30)
	expression : expression . MOD expression  (31)

	.  reduce 30


state 64
	expression : expression . ADD expression  (27)
	expression : expression . SUB expression  (28)
	expression : expression . MUL expression  (29)
	expression : expression . DIV expression  (30)
	expression : expression . MOD expression  (31)
	expression : expression MOD expression .  (31)

	.  reduce 31


state 65
	condition : expression LT expression .  (15)
	expression : expression . ADD expression  (27)
	expression : expression . SUB expression  (28)
	expression : expression . MUL expression  (29)
	expression : expression . DIV expression  (30)
	expression : expression . MOD expression  (31)

	ADD  shift 44
	SUB  shift 45
	MUL  shift 46
	DIV  shift 47
	MOD  shift 48
	THEN  reduce 15


state 66
	condition : expression GT expression .  (16)
	expression : expression . ADD expression  (27)
	expression : expression . SUB expression  (28)
	expression : expression . MUL expression  (29)
	expression : expression . DIV expression  (30)
	expression : expression . MOD expression  (31)

	ADD  shift 44
	SUB  shift 45
	MUL  shift 46
	DIV  shift 47
	MOD  shift 48
	THEN  reduce 16


state 67
	condition : expression LE expression .  (17)
	expression : expression . ADD expression  (27)
	expression : expression . SUB expression  (28)
	expression : expression . MUL expression  (29)
	expression : expression . DIV expression  (30)
	expression : expression . MOD expression  (31)

	ADD  shift 44
	SUB  shift 45
	MUL  shift 46
	DIV  shift 47
	MOD  shift 48
	THEN  reduce 17


state 68
	condition : expression GE expression .  (18)
	expression : expression . ADD expression  (27)
	expression : expression . SUB expression  (28)
	expression : expression . MUL expression  (29)
	expression : expression . DIV expression  (30)
	expression : expression . MOD expression  (31)

	ADD  shift 44
	SUB  shift 45
	MUL  shift 46
	DIV  shift 47
	MOD  shift 48
	THEN  reduce 18


state 69
	condition : expression EQ expression .  (19)
	expression : expression . ADD expression  (27)
	expression : expression . SUB expression  (28)
	expression : expression . MUL expression  (29)
	expression : expression . DIV expression  (30)
	expression : expression . MOD expression  (31)

	ADD  shift 44
	SUB  shift 45
	MUL  shift 46
	DIV  shift 47
	MOD  shift 48
	THEN  reduce 19


state 70
	condition : expression NE expression .  (20)
	expression : expression . ADD expression  (27)
	expression : expression . SUB expression  (28)
	expression : expression . MUL expression  (29)
	expression : expression . DIV expression  (30)
	expression : expression . MOD expression  (31)

	ADD  shift 44
	SUB  shift 45
	MUL  shift 46
	DIV  shift 47
	MOD  shift 48
	THEN  reduce 20


state 71
	cell : LBRACKET INT COMMA INT RBRACKET .  (21)

	.  reduce 21


state 72
	elseif_branches : elseif_branches . ELSEIF condition THEN opt_statements  (10)
	statement : IF condition THEN opt_statements elseif_branches . ELSE opt_statements END  (11)
	statement : IF condition THEN opt_statements elseif_branches . END  (12)

	END  shift 73
	ELSE  shift 74
	ELSEIF  shift 75
	.  error


state 73
	statement : IF condition THEN opt_statements elseif_branches END .  (12)

	.  reduce 12


state 74
	statement : IF condition THEN opt_statements elseif_branches ELSE . opt_statements END  (11)
	opt_statements : .  (7)

	.  reduce 7

	opt_statements  goto 76


state 75
	elseif_branches : elseif_branches ELSEIF . condition THEN opt_statements  (10)

	LBRACKET  shift 22
	ADD  shift 29
	SUB  shift 30
	LPAREN  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	condition  goto 77
	cell  goto 35
	expression  goto 36


state 76
	opt_statements : opt_statements . statement  (8)
	statement : IF condition THEN opt_statements elseif_branches ELSE opt_statements . END  (11)

	END  shift 78
	LBRACKET  shift 22
	IF  shift 23
	ID  shift 24
	.  error

	statement  goto 25
	cell  goto 26


state 77
	elseif_branches : elseif_branches ELSEIF condition . THEN opt_statements  (10)

	THEN  shift 79
	.  error


state 78
	statement : IF condition THEN opt_statements elseif_branches ELSE opt_statements END .  (11)

	.  reduce 11


state 79
	elseif_branches : elseif_branches ELSEIF condition THEN . opt_statements  (10)
	opt_statements : .  (7)

	.  reduce 7

	opt_statements  goto 80


state 80
	opt_statements : opt_statements . statement  (8)
	elseif_branches : elseif_branches ELSEIF condition THEN opt_statements .  (10)

	LBRACKET  shift 22
	IF  shift 23
	ID  shift 24
	END  reduce 10
	ELSE  reduce 10
	ELSEIF  reduce 10

	statement  goto 25
	cell  goto 26


33 terminals, 12 nonterminals
34 grammar rules, 81 states
